--- a/src/App.css
+++ b/src/App.css
@@ -80,13 +80,80 @@
   font-weight: 600;
       text-decoration: none;
         font-weight: 600;
-        border: 2px solid black;
+        
         padding: 8px 25px;
         border-radius: 12px;
         color: black;
+        flex: 4;
 }
 
 .name-item{
 margin: 30px 0px;
+width: 50%;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+border: 2px solid;
   
+}
+
+.fns{
+  padding: 10px 15px;
+  margin: 30px auto;
+  display: flex;
+}
+
+.delete-btn{
+      background-color: #d9534f;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        flex: 1;
+        border-radius: 10px;
+}
+.delete-btn-modal {
+  background-color: #d9534f;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  
+  border-radius: 10px;
+}
+.cancel-btn-modal {
+  /* background-color: #d9534f; */
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  margin: 20px;
+
+  border-radius: 10px;
+}
+
+.gods{
+  display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 30px 0px;
+  }
+.god-img{
+  height: 120px!important;
+}
+.bill {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bill-print{
+    border: none;
+      background-color: #5cb85c;
+  
+      display: flex;
+      color: white;
+      margin: 30px auto;
+      box-shadow: black 3px 4px 12px;
+     
+      padding: 10px 20px;
+      font-weight: 600;
+      border-radius: 9px;
 }
