--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,7 @@ border: 2px solid;
 }
 
 h1{
+  font-size: 24px!important;
   text-align: center;
 }
 
@@ -198,7 +199,7 @@ h1{
 }
 
 .shree-img{
-  height: 100px;
+  height: 40px;
   display: flex;
   margin: auto;
 }
