--- a/src/Components/dataconvert.css
+++ b/src/Components/dataconvert.css
@@ -1,269 +1,263 @@
 body {
-    font-family: 'Bebas Neue', cursive;
-    width: 100vw;
-    height: 100vh;
-    overflow-x: hidden;
+  font-family: "Bebas Neue", cursive;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 .et_pb_contact_form_label {
-    display: block;
-    color: black;
-    font-weight: bold;
-    letter-spacing: 1.2px;
-    font-size: 18px;
-    padding-bottom: 5px;
+  display: block;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 1.2px;
+  font-size: 18px;
+  padding-bottom: 5px;
 }
 
 input[id="et_pb_contact_brand_file_request_0"] {
-    display: none;
+  display: none;
 }
 
 label[for="et_pb_contact_brand_file_request_0"] {
-    background: #fff;
-    height: 145px;
-    background-image: url('https://image.flaticon.com/icons/svg/126/126477.svg');
-    background-repeat: no-repeat;
-    background-position: top 18px center;
-    position: absolute;
-    background-size: 7%;
-    color: transparent;
-    margin: auto;
-    width: 450px;
-    top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-50%);
-    border: 1px solid #a2a1a7;
-    box-sizing: border-box;
+  background: #fff;
+  height: 145px;
+  background-image: url("https://image.flaticon.com/icons/svg/126/126477.svg");
+  background-repeat: no-repeat;
+  background-position: top 18px center;
+  position: absolute;
+  background-size: 7%;
+  color: transparent;
+  margin: auto;
+  width: 450px;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
+  border: 1px solid #a2a1a7;
+  box-sizing: border-box;
 }
 
 label[for="et_pb_contact_brand_file_request_0"]:before {
-    content: "Drag and Drop a file here";
-    display: block;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 14px;
-    color: #202020;
-    font-weight: 400;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  content: "Drag and Drop a file here";
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 14px;
+  color: #202020;
+  font-weight: 400;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 label[for="et_pb_contact_brand_file_request_0"]:after {
-    display: block;
-    content: 'Browse';
-    background: #16a317;
-    width: 86px;
-    height: 27px;
-    line-height: 27px;
-    position: absolute;
-    bottom: 19px;
-    font-size: 14px;
-    color: white;
-    font-weight: 500;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  display: block;
+  content: "Browse";
+  background: #16a317;
+  width: 86px;
+  height: 27px;
+  line-height: 27px;
+  position: absolute;
+  bottom: 19px;
+  font-size: 14px;
+  color: white;
+  font-weight: 500;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 label[for="et_pb_contact_brand_request_0"]:after {
-    content: " (Provide link or Upload files if you already have guidelines)";
-    font-size: 12px;
-    letter-spacing: -0.31px;
-    color: #7a7a7a;
-    font-weight: normal;
+  content: " (Provide link or Upload files if you already have guidelines)";
+  font-size: 12px;
+  letter-spacing: -0.31px;
+  color: #7a7a7a;
+  font-weight: normal;
 }
 
 label[for="et_pb_contact_design_request_0"]:after {
-    content: " (Provide link or Upload design files)";
-    font-size: 12px;
-    letter-spacing: -0.31px;
-    color: #7a7a7a;
-    font-weight: normal;
+  content: " (Provide link or Upload design files)";
+  font-size: 12px;
+  letter-spacing: -0.31px;
+  color: #7a7a7a;
+  font-weight: normal;
 }
 
 label[for="et_pb_contact_brand_file_request_0"].changed,
 label[for="et_pb_contact_brand_file_request_0"]:hover {
-    background-color: #e3f2fd;
+  background-color: #e3f2fd;
 }
 
 label[for="et_pb_contact_brand_file_request_0"] {
-    cursor: pointer;
-    transition: 400ms ease;
+  cursor: pointer;
+  transition: 400ms ease;
 }
 
 .file_names {
-    display: block;
-    position: absolute;
-    color: black;
-    left: 0;
-    bottom: -30px;
-    font-size: 13px;
-    font-weight: 300;
+  display: block;
+  position: absolute;
+  color: black;
+  left: 0;
+  bottom: -30px;
+  font-size: 13px;
+  font-weight: 300;
 }
 
 .file_names {
-    text-align: center;
+  text-align: center;
 }
-.input-feild{
-    /* width: 100%; */
-        padding: 10px 0;
-        font-size: 16px;
-        color: #c46507;
-        margin-bottom: 30px;
-        border: none;
-        border-bottom: 1px solid #c46507;
-        outline: none;
-        background: transparent;
+.input-feild {
+  /* width: 100%; */
+  padding: 10px 0;
+  font-size: 16px;
+  color: #c46507;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #c46507;
+  outline: none;
+  background: transparent;
 }
 
-
-
-.btn8{
-    position: relative;
-        display: inline-block;
-        padding: 10px 20px;
-        color: #c46507;
-        font-size: 16px;
-        text-decoration: none;
-        text-transform: uppercase;
-        overflow: hidden;
-        transition: .5s;
-        margin-top: 40px;
-        margin-bottom: 50px;
-        letter-spacing: 4px;
-        border: 0px;
+.btn8 {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #c46507;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  margin-bottom: 50px;
+  letter-spacing: 4px;
+  border: 0px;
 }
-.btn8:hover{
-    background: #c46507;
-        color: #fff;
-        border-radius: 5px;
-        box-shadow: 0 0 5px #c46507,
-            0 0 25px #c46507,
-            0 0 50px #c46507,
-            0 0 100px #c46507;
+.btn8:hover {
+  background: #c46507;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #c46507, 0 0 25px #c46507, 0 0 50px #c46507,
+    0 0 100px #c46507;
 }
-.btn8 span{
-    position: absolute;
-        display: block;
+.btn8 span {
+  position: absolute;
+  display: block;
 }
 .btn8 span:nth-child(1) {
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #c46507);
-    animation: btn-anim1 1s linear infinite;
-    
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #c46507);
+  animation: btn-anim1 1s linear infinite;
 }
 
 @keyframes btn-anim1 {
-    0% {
-        left: -100%;
-    }
+  0% {
+    left: -100%;
+  }
 
-    50%,
-    100% {
-        left: 100%;
-    }
+  50%,
+  100% {
+    left: 100%;
+  }
 }
 
 .btn8 span:nth-child(2) {
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #c46507);
-    animation: btn-anim2 1s linear infinite;
-    animation-delay: .25s
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #c46507);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: 0.25s;
 }
 
 @keyframes btn-anim2 {
-    0% {
-        top: -100%;
-    }
+  0% {
+    top: -100%;
+  }
 
-    50%,
-    100% {
-        top: 100%;
-    }
+  50%,
+  100% {
+    top: 100%;
+  }
 }
 
 .btn8 span:nth-child(3) {
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #c46507);
-    animation: btn-anim3 1s linear infinite;
-    animation-delay: .5s
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #c46507);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: 0.5s;
 }
 
 @keyframes btn-anim3 {
-    0% {
-        right: -100%;
-    }
+  0% {
+    right: -100%;
+  }
 
-    50%,
-    100% {
-        right: 100%;
-    }
+  50%,
+  100% {
+    right: 100%;
+  }
 }
 
 .btn8 span:nth-child(4) {
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #c46507);
-    animation: btn-anim4 1s linear infinite;
-    animation-delay: .75s
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #c46507);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: 0.75s;
 }
 
 @keyframes btn-anim4 {
-    0% {
-        bottom: -100%;
-    }
+  0% {
+    bottom: -100%;
+  }
 
-    50%,
-    100% {
-        bottom: 100%;
-    }
+  50%,
+  100% {
+    bottom: 100%;
+  }
 }
 
 .custom-btn {
-    width: 130px;
-    height: 40px;
-    color: #fff;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
-        7px 7px 20px 0px rgba(0, 0, 0, .1),
-        4px 4px 5px 0px rgba(0, 0, 0, .1);
-    outline: none;
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: "Lato", sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
+  outline: none;
 }
 
 /* 1 */
 .btn-1 {
-    background: rgb(131, 62, 6);
-    background: linear-gradient(0deg, rgb(131, 69, 6) 0%, rgb(180, 113, 12) 100%);
-    border: none;
+  background: rgb(131, 62, 6);
+  background: linear-gradient(0deg, rgb(131, 69, 6) 0%, rgb(180, 113, 12) 100%);
+  border: none;
 }
 
 .btn-1:hover {
-    background: rgb(255, 162, 0);
-    background: linear-gradient(0deg, rgb(255, 196, 0) 0%, rgb(251, 122, 2) 100%);
+  background: rgb(255, 162, 0);
+  background: linear-gradient(0deg, rgb(255, 196, 0) 0%, rgb(251, 122, 2) 100%);
 }
